feat : 로고 클릭시 메인 페이지 이동 구현

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div>
       <header>
         <div>
-          <h1>TRAVEL</h1>
+          <a href="/">
+            <h1>TRAVEL</h1>
+          </a>
           <nav>
             <ul class="menu navContainer">
               <li class="nav">
