--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
     <div>
       <header>
         <div>
-          <a href="/">
+          <a href="/TRAVLE/">
             <h1>TRAVEL</h1>
           </a>
           <nav>
             <ul class="menu navContainer">
               <li class="nav">
-                <a href="/">Home</a>
+                <a href="/TRAVLE/">Home</a>
               </li>
               <li class="nav">
-                <a href="/Ankara">Ankara</a>
+                <a href="/TRAVLE/Ankara">Ankara</a>
               </li>
               <li class="nav">
-                <a href="/Antalya">Antalya</a>
+                <a href="/TRAVLE/Antalya">Antalya</a>
               </li>
               <li class="nav">
-                <a href="/Cappadocia">Cappadocia</a>
+                <a href="/TRAVLE/Cappadocia">Cappadocia</a>
               </li>
               <li class="nav">
-                <a href="/Pamukkale">Pamukkale</a>
+                <a href="/TRAVLE/Pamukkale">Pamukkale</a>
               </li>
             </ul>
             <input type="checkbox" id="menu" />
@@ -43,19 +43,19 @@
 
             <ul class="menuDrop navContainer">
               <li class="nav">
-                <a href="/">Home</a>
+                <a href="/TRAVLE/">Home</a>
               </li>
               <li class="nav">
-                <a href="/Ankara">Ankara</a>
+                <a href="/TRAVLE/Ankara">Ankara</a>
               </li>
               <li class="nav">
-                <a href="/Antalya">Antalya</a>
+                <a href="/TRAVLE/Antalya">Antalya</a>
               </li>
               <li class="nav">
-                <a href="/Cappadocia">Cappadocia</a>
+                <a href="/TRAVLE/Cappadocia">Cappadocia</a>
               </li>
               <li class="nav">
-                <a href="/Pamukkale">Pamukkale</a>
+                <a href="/TRAVLE/Pamukkale">Pamukkale</a>
               </li>
             </ul>
           </nav>
